[gd_scene load_steps=6 format=3 uid="uid://damodiy62mvx6"]

[ext_resource type="Script" uid="uid://dy50pl8dtvys5" path="res://game/game_envs/mvp/main.gd" id="1_8g44v"]
[ext_resource type="PackedScene" uid="uid://dbjbnky5qu1oo" path="res://tcp/tcp_server_python.tscn" id="2_6gq24"]
[ext_resource type="PackedScene" uid="uid://jtff4k2ium7f" path="res://game/RL/game_process.tscn" id="3_ceors"]
[ext_resource type="PackedScene" uid="uid://dle34e2m74ipt" path="res://game/RL/agent.tscn" id="4_x5g2k"]
[ext_resource type="Script" uid="uid://fj517ekitg80" path="res://game/RL/agent.gd" id="5_6gq24"]

[node name="RLGodotGame" type="Node"]
script = ExtResource("1_8g44v")

[node name="TCPServerPython" parent="." instance=ExtResource("2_6gq24")]

[node name="GameProcess" parent="." instance=ExtResource("3_ceors")]

[node name="Agent" parent="GameProcess" instance=ExtResource("4_x5g2k")]
script = ExtResource("5_6gq24")
